<resources>
    <string name="app_name">Navigation View</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>


    <string name="mill_string">Milling</string>
    <string name="lathe_string">Turning</string>
    <string name="drill_srting">Drill Chart</string>
    <string name="starred_string">Starred</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string name="diameter">Diameter</string>
    <string name="sfm">SFM</string>
    <string name="RPM">RPM</string>
    <string name="num_teeth">Number of Teeth</string>
    <string name="chipload">Chipload</string>
    <string name="feedrate">Feed Rate</string>
</resources>