<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     
        
    <group android:checkableBehavior="single">
         
               
        <item
            android:id="@+id/milling"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/mill_string" />
         
        <item
            android:id="@+id/turning"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/lathe_string" />

        <item
            android:id="@+id/drilling"
            android:checked="false"
            android:icon="@drawable/ic_send_black"
            android:title="@string/drill_srting" />

        <item
            android:id="@+id/drafts"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/draft_string" />


        <item
            android:id="@+id/allmail"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/all_mail_string" />
        <item
            android:id="@+id/trash"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/trash_string" />
        <item
            android:id="@+id/spam"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/spam_string" />
            
    </group>
</menu>